Bug 136737 - Grid in the Change Icon dialog is oversized
Summary: Grid in the Change Icon dialog is oversized
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.3 target:7.1.0 target:7.0.2
Keywords: bibisectRequest, regression
: 136723 137034 (view as bug list)
Depends on:
Blocks: Customize-Dialog-Toolbars
  Show dependency treegraph
 
Reported: 2020-09-14 07:25 UTC by Maxim Monastirsky
Modified: 2020-11-12 21:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2020-09-14 07:25:42 UTC
Steps to reproduce:

1. Open Writer.
2. Right click on any toolbar > Customize Toolbar...
3. Select any item from the Assigned Commands list.
4. Modify > Change Icon...

With gtk3 the grid is so large that it doesn't fit the screen. With gen it's stretched horizontally and only one column is visible.

This appears to be related to https://git.libreoffice.org/core/commit/325faca502ffca43cf8cbb272fac2516bcb8eb55 . Reverting that commit locally makes the problem go away.
Comment 1 BogdanB 2020-09-14 09:04:21 UTC
Confirmed
Version: 7.1.0.0.alpha0+
Build ID: 3a22f5a589e822e7ca8bbb00e38a3aff93ed7ba5
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2020-09-17 14:28:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/d9ae83e596e94c4d4967c5de653c2060b0648c78

tdf#136737 grid in change icon dialog ends up oversized

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2020-09-17 14:30:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb162ea75724269ffc6b97d7f31d96aa1cbd6da8

tdf#136737 grid in change icon dialog ends up oversized

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2020-09-17 14:38:15 UTC
*** Bug 136723 has been marked as a duplicate of this bug. ***
Comment 5 Caolán McNamara 2020-09-17 14:49:55 UTC
that seems to be the problem, fixed in master and for 7.0.3. Backport for 7.0.2 in gerrit
Comment 6 Buovjaga 2020-09-18 13:28:27 UTC
I verify that the palette misbehaviour reported in bug 136723 is gone!
Modify > Change Icon also looks good.

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 8de58b6fd63302544affb90df347323b82b7d259
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 18 September 2020
Comment 7 Commit Notification 2020-09-29 10:01:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0-2":

https://git.libreoffice.org/core/commit/e397c3775303fc2eb850ae8d1cb1ab2cc271a446

tdf#136737 grid in change icon dialog ends up oversized

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Attila Baraksó (NISZ) 2020-11-12 21:30:00 UTC
*** Bug 137034 has been marked as a duplicate of this bug. ***