tdf#136737 grid in change icon dialog ends up oversized

Change-Id: Ib3d28fc967bf5e1b95d71ebe42e1fc540ea91ac3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102927
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit d9ae83e596e94c4d4967c5de653c2060b0648c78)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102929
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>